<resources>
    <string name="app_name">Blink</string>
    <string name="blink_just_sit_back_and_work">Blink! \nJust sit back and work \nand I will remind you to blink in every %s min.</string>
    <string name="relax_txt">Relax!\n You had enough of work.</string>
    <string name="change_duration">Change duration</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="_10">10</string>
    <string name="we_will_notify_you_to_blink">We will notify you to blink in every %s min, until you shut it off!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="max_interval_prompt">You can not select interval more than 20 min, well its not good for your eyes.</string>
    <string name="min_interval_prompt">You can not select interval less than 5 min, well its not good to loose concentration now and then.</string>
    <string name="if_you_reject_permission">If you reject this, you wont be able to use this app</string>

    <!--Fonts-->
    <string name="ArchitectsDaughterRegular">ArchitectsDaughterRegular.ttf</string>
    <string name="IndieFlower">IndieFlower.ttf</string>
    <string name="ABeeZeeRegular">ABeeZeeRegular.ttf</string>
    <string name="blink_its_time_to_blink">Its blink time..!!  *_*</string>
    <string name="blink">Blink!</string>
    <!--Fonts-->


    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-3454303483023480/4485257033</string>
    <!--<string name="banner_home_footer">ca-app-pub-3454303483023480~7829605673</string>-->
    <!--<string name="interstitial_full_screen"></string>-->
</resources>
