<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/work_seamless_pattern2">

        <ImageView
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="@dimen/dimen_80dp"
            android:layout_centerInParent="true"
            android:background="@drawable/alarm_clock" />
    </RelativeLayout>

    <blackBracket.blink.widgets.CTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/change_duration"
        android:textSize="@dimen/dimen_16sp"
        app:font="@string/ABeeZeeRegular" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgSub"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="@dimen/dimen_4dp"
            android:background="@drawable/ic_minus"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/minus"
            android:visibility="visible" />

        <blackBracket.blink.widgets.CTextView
            android:id="@+id/txtInterval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dimen_4dp"
            android:text="@string/_10"
            android:textSize="@dimen/dimen_24dp" />

        <ImageView
            android:id="@+id/imgAdd"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="@dimen/dimen_4dp"
            android:background="@drawable/ic_add"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/plus"
            android:visibility="visible" />
    </LinearLayout>

    <blackBracket.blink.widgets.CTextView
        android:id="@+id/txtInform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8dp"
        android:text="@string/we_will_notify_you_to_blink"
        android:textSize="@dimen/dimen_16sp"
        app:font="@string/ABeeZeeRegular" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">


        <blackBracket.blink.widgets.CTextView
            android:id="@+id/txtCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:padding="@dimen/dimen_4dp"
            android:text="@string/cancel"
            android:textColor="@color/darkGreen"
            android:textSize="@dimen/dimen_20sp" />

        <blackBracket.blink.widgets.CTextView
            android:id="@+id/txtOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:padding="@dimen/dimen_4dp"
            android:text="@string/ok"
            android:textColor="@color/darkGreen"
            android:textSize="@dimen/dimen_20sp" />
    </LinearLayout>


</LinearLayout>